logs/offboard_pkg/build.make.231.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightCircle()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:198:23: error: ‘__gnu_cxx::__alloc_traits<std::allocator<TaskManager>, TaskManager>::value_type’ {aka ‘class TaskManager’} has no member named ‘is_GPS_succuss’; did you mean ‘is_GPS_circle_succuss’?
  198 |             if(uav[i].is_GPS_succuss(lla[i])){j = j+1;}
      |                       ^~~~~~~~~~~~~~
      |                       is_GPS_circle_succuss
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘void MultiBody::Init_lla_circle(double)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:221:9: error: ‘theta_d’ was not declared in this scope
  221 |         theta_d = 360.0/(nSample-1)*k;
      |         ^~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:224:13: error: ‘ned’ was not declared in this scope
  224 |             ned = uav[i].get_ned(theta_d, yaw_d, R);
      |             ^~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:225:33: error: ‘lla_lead0’ was not declared in this scope
  225 |             uav[i].ned2lla(ned, lla_lead0, lla);
      |                                 ^~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:225:44: error: ‘lla’ was not declared in this scope
  225 |             uav[i].ned2lla(ned, lla_lead0, lla);
      |                                            ^~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
